MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki

vNext
----------
- [PATCH] Safe logging of Kotlin data classes through ILoggable interface (#2081)
- [PATCH] Update nimbus-jose-jwt 9.37.3 and junit 4.13.2 (#2084)

Version 5.3.0
---------
- [MINOR] Give BrokerMsalController higher priority than LocalMsalController if available (#2040)
- [PATCH] Update to common@17.3.0

Version 5.2.1
---------
- [MINOR] Update common @17.2.1

Version 5.2.0
---------
- [MINOR] Rename "is QR + PIN available" API to "get preferred auth method". (#2012)
- [MINOR] Add support for CIAM custom domain (#2029)
- [MINOR] Removing passkey feature flag (#2044)
- [MINOR] Update common @17.2.0

Version 5.1.0
---------
- [PATCH] Update common @17.1.0
- [PATCH] Fix MSAL Issue #1864 (#2003)
- [MINOR] Add isQRPinAvailable API to MSAL IPublicClientApplication (#1931)
- [MINOR] Add PreferredAuthMethod to interactive token flow (#1964)

Version 5.0.1
---------
- [PATCH] Update robolectricVersion 4.11.1 (#2015)
- [PATCH] Update common @17.0.1

Version 5.0.0
---------
- [MINOR] Update common @17.0.0
- [MINOR] Add consumer rule to remove native auth from msal by default (#1986)
- [MAJOR] Consuming Credential Manager from common (brings minCompileSdk 34) (#1987)

Version 4.10.0
---------
- [PATCH] Update common @16.2.0
- [PATCH] Fix NPE in SingleAccountPublicClientApplication.getPersistedCurrentAccount (#1933)
- [PATCH] Updating JSON version (#1932)
- [MINOR] Updating Moshi versions (#1926)

Version 4.9.0
---------
- [PATCH] Update common @16.1.0
- [MINOR] Adding webauthn_capable property option for MSAL config files (#1895)

Version 4.8.1
---------
- [MINOR] Add LTW as prod broker app (#2179)
- [PATCH] Update common @16.0.1

Version 4.8.0
---------
- [MINOR] Use Active Broker cache specifically for Client SDK (#1892)
- [MINOR] MSA UI tests for Brokered Auth (#1856)
- [MINOR] Updated target, compile SDK, AGP and gradle versions(#1882)
- [PATCH] Update common @16.0.0
