@@ -4,6 +4,7 @@ vNext
 ----------
 - [PATCH] Safe logging of Kotlin data classes through ILoggable interface (#2081)
 - [PATCH] Update nimbus-jose-jwt 9.37.3 and junit 4.13.2 (#2084)
+- [PATCH] Support for multiple access tokens in NativeAuth (#2082)
 
 Version 5.3.0
 ---------
